# yggdrasil-viewer

./: Cargo.toml
.run/: Test All.run.xml
projects/tidy-tree/: Cargo.toml
projects/tidy-tree/src/: geometry.rs  layout.rs  lib.rs  node.rs
projects/tidy-tree/src/layout/: basic_layout.rs  config.rs  linked_y_list.rs  mod.rs  tidy_layout.rs
projects/tidy-tree/src/node/: mod.rs
projects/tidy-tree/src/traverse/: mod.rs  tests.rs
projects/tidy-tree/tests/: aesthetic_rules.rs  gen.rs  generator.rs  layout_bench.rs  layout_test.rs  main.rs
projects/tree-layout/: Cargo.toml
projects/tree-layout/examples/: binary.rs  diverse.rs
projects/tree-layout/examples/utils/: mod.rs
projects/tree-layout/src/: lib.rs  tree.rs
projects/tree-layout/src/arena/: mod.rs
projects/tree-layout/src/free/: mod.rs  readme.md  readme.ts
projects/tree-layout/src/layered/: mod.rs
projects/tree-layout/src/layout/: config.rs  linked_y_list.rs  mod.rs
projects/tree-layout/src/node/: basic_layout.rs  mod.rs
projects/tree-layout/src/traits/: mod.rs
projects/tree-layout/src/tree/: mod.rs  test.rs
projects/tree-layout/src/utils/: mod.rs
projects/tree-layout/tests/: aesthetic_rules.rs  layout_bench.rs  main.rs  test.rs
projects/tree-layout/tests/aesthetic_rules/: mod.rs
projects/tree-layout/tests/binary/: mod.rs
projects/tree-layout/tests/generator/: mod.rs
projects/tree-layout/tests/layout_bench/: mod.rs
projects/tree-layout/tests/layout_test/: mod.rs
projects/ygg-viewer/: Cargo.toml
projects/ygg-viewer/src/: lib.rs
projects/ygg-viewer/src/plot_svg/: mod.rs  style.css
projects/ygg-viewer/tests/: main.rs
