[package]
name = "tree-layout"
version = "0.0.2"
authors = [
    "Sean Marshallsay <srm.1708@gmail.com>",
    "Zixuan Chen <remch183@outlook.com>"
]
keywords = ["tree", "layout"]
categories = ["algorithms"]
description = "Get the arrangement layout of the tree diagram."
repository = "https://github.com/ygg-lang/yggdrasil-viewer"
license = "MIT"
readme = "readme.md"
edition = "2021"

[dependencies]
num = "0.4.0"
shape-core = "0.1.16"
tinyset = "0.4.10"

[dev-dependencies]
rand = "0.8.5"
petgraph = "0.6.4"
