[package]
name = "yggdrasil-viewer"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dependencies.tree-layout]
version = "0.0.*"
path = "../tree-layout"

[dependencies.yggdrasil-rt]
version = "0.0.11"
#path = "../tree-layout"

[dev-dependencies]
yggdrasil-parser = "0.1.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
